--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
+    "swagger-ui": "^5.18.2",
+    "swagger-ui-react": "^5.18.2",
     "sweetalert2": "^11.14.5",
     "yup": "^1.4.0"
   },
